--- a/templates/Player2.html
+++ b/templates/Player2.html
@@ -24,6 +24,7 @@
         background-image: url("static/bgimage.png");
         background-size: cover;
     }
+    
     #question{
         font-family: "winnerfont", sans-serif;
         font-weight: 200;
@@ -51,7 +52,7 @@
                 <textarea type="text" name="player2inpt" id="player2inpt" placeholder="Prompt Here" class="border-2 border-[#3a3a3a] w-[24.5rem] h-[4rem] p-[1rem] rounded-md bg-[#000000] text-white"></textarea>
                 <button type="submit" class="font-bold p-[1rem] bg-[#3b82f6] w-[8rem] ml-[1rem] rounded-md text-[#EEE2DE]">Generate</button>
             </div>
-             <button type="submit" value="finalsubmit" name="FinalSubmit" class="font-bold p-[1rem] bg-[#ef4444] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE]">SUBMIT!!</button>
+            <button type="submit" value="finalsubmit" name="FinalSubmit" id="FinalSubmit" class="font-bold p-[1rem] bg-[#3b82f6] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE]">SUBMIT!!</button>
             </form>
         </div>
     </div>
