--- a/templates/Player1.html
+++ b/templates/Player1.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="{{ url_for('static',filename='logobrowser.png')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/40b8ba8176.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"></head>
 <style>
      @font-face {
@@ -29,6 +30,7 @@
         font-weight: 200;
         font-style: normal;
     }
+    
     *:focus{
         outline: none;
     }
@@ -41,17 +43,17 @@
                 <p id="question" class="text-[2rem] text-[#EEE2DE]">Question: {{question}}</p>
             </div>
         <div class="w-[35rem] h-[35.5rem] rounded-md ">
-            <!-- <img class="w-[35rem] h-[35rem]" src="https://fal.media/files/penguin/a7_SExdI7g13hkjzkU6oM_cc1dbb714c32424f9979b2ae98592284.jpg" alt=""> -->
+            <img class="w-[35rem] h-[35rem]" src="https://fal.media/files/penguin/a7_SExdI7g13hkjzkU6oM_cc1dbb714c32424f9979b2ae98592284.jpg" alt="">
             {% if reply %} 
-            <img class="w-[35rem] h-[35rem]" src="{{reply}}" alt="">
+            <!-- <img class="w-[35rem] h-[35rem]" src="{{reply}}" alt=""> -->
             {% endif %}
         </div>
          <form action="/player1" method="post" class="flex flex-col mt-[1rem] items-center justify-center"> 
             <div class="flex">
                 <textarea type="text" name="player1inpt" id="player1inpt" placeholder="Prompt Here" class="border-2 border-[#3a3a3a] w-[24.5rem] h-[4rem] p-[1rem] rounded-md bg-[#000000] text-white"></textarea>
-                <button type="submit" class="font-bold p-[1rem] bg-[#3b82f6] w-[8rem] ml-[1rem] rounded-md text-[#EEE2DE]">Generate</button>
+                <button type="submit" class="font-bold p-[1rem] bg-[#003092] w-[9rem] ml-[1rem] rounded-md text-[#EEE2DE]">Generate <i class="fa-solid fa-wand-magic"></i></button>
             </div>
-            <button type="submit" value="finalsubmit" name="FinalSubmit" class="font-bold p-[1rem] bg-[#ef4444] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE]">SUBMIT!!</button>
+            <button type="submit" value="finalsubmit" name="FinalSubmit" id="FinalSubmit" class="font-bold p-[1rem] bg-[#3b82f6] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE]">SUBMIT!!</button>
         </form>
         </div>
     </div>
