--- a/templates/Player1.html
+++ b/templates/Player1.html
@@ -30,7 +30,15 @@
         font-weight: 200;
         font-style: normal;
     }
-    
+    textarea {
+
+    background-color: transparent;
+
+    }
+    /* #generate{
+        background-image: url("static/bgimage.png");
+        background-size: cover;
+    } */
     *:focus{
         outline: none;
     }
@@ -51,9 +59,9 @@
          <form action="/player1" method="post" class="flex flex-col mt-[1rem] items-center justify-center"> 
             <div class="flex">
                 <textarea type="text" name="player1inpt" id="player1inpt" placeholder="Prompt Here" class="border-2 border-[#3a3a3a] w-[24.5rem] h-[4rem] p-[1rem] rounded-md bg-[#000000] text-white"></textarea>
-                <button type="submit" class="font-bold p-[1rem] bg-[#003092] w-[9rem] ml-[1rem] rounded-md text-[#EEE2DE]">Generate <i class="fa-solid fa-wand-magic"></i></button>
+                <button id="generate" type="submit" class="font-bold hover:bg-[#0a205a] hover:border-[#EEE2DE] border-2 border-[#3a3a3a] p-[1rem] bg-none w-[9rem] ml-[1rem] rounded-md text-[#EEE2DE]">Generate <i class="fa-solid fa-wand-magic"></i></button>
             </div>
-            <button type="submit" value="finalsubmit" name="FinalSubmit" id="FinalSubmit" class="font-bold p-[1rem] bg-[#3b82f6] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE]">SUBMIT!!</button>
+            <button type="submit" value="finalsubmit" name="FinalSubmit" id="FinalSubmit" class="font-bold p-[0.5rem] mb-[1rem] bg-[#D91656] w-[35rem] mt-[1rem] rounded-md text-[#EEE2DE] text-[1.3rem]">SUBMIT!!</button>
         </form>
         </div>
     </div>
